# the_poom

./: .clang-format  .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
applications/poom_air_drums/: CMakeLists.txt  README.md  poom_air_drums.c
applications/poom_ble_hid/: CMakeLists.txt  README.md  esp_hidd_prf_api.c  esp_hidd_prf_api.h  hid_dev.c  hid_dev.h  hid_device_le_prf.c  hidd_le_prf_int.h  poom_ble_hid.c
applications/poom_ble_keyboard/: CMakeLists.txt  README.md  poom_ble_keyboard.c
applications/poom_ble_keyboard/include/: poom_ble_keyboard.h
applications/poom_ble_plot/: CMakeLists.txt  README.md  poom_ble_plot.c  poom_imu_plot.c
applications/poom_ble_spam/: CMakeLists.txt  README.md  poom_ble_spam.c
applications/poom_ble_tracker/: CMakeLists.txt  README.md  poom_ble_tracker.c
applications/poom_edge_impulse/: CMakeLists.txt  README.md  component.mk  poom_edge_impulse.c
applications/poom_game_snake/: CMakeLists.txt  README.md  component.mk  poom_game_snake.c
applications/poom_http_load_test/: CMakeLists.txt  README.md  poom_http_load_test.c
applications/poom_imu_stream/: CMakeLists.txt  README.md  poom_imu_stream.c
main/: CMakeLists.txt  idf_component.yml  main.c
modules/poom_fw_update/: CMakeLists.txt  README.md  poom_fw_update.c
modules/poom_fw_update/include/: dfu.h  poom_dfu_log.h
modules/poom_fw_update/modules/http_server/: http_server.c  http_server.h
modules/poom_fw_update/src/webpage/: app.css  app.js  index.html
modules/poom_wifi_ctrl/: CMakeLists.txt  Kconfig.projbuild  README.md  poom_wifi_ctrl.c
modules/poom_wifi_ctrl/include/: poom_wifi_ctrl.h
(+103 files in other folders)
